_generated-doc/3.2/config/quarkus-reactive-pg-client-general-config-items.adoc

:summaryTableId: quarkus-reactive-pg-client-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-pg-client-general-config-items_configuration]]link:#quarkus-reactive-pg-client-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-pg-client-general-config-items_quarkus.datasource.reactive.postgresql.pipelining-limit]]`link:#quarkus-reactive-pg-client-general-config-items_quarkus.datasource.reactive.postgresql.pipelining-limit[quarkus.datasource.reactive.postgresql.pipelining-limit]`


[.description]
--
The maximum number of inflight database commands that can be pipelined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-pg-client-general-config-items_quarkus.datasource.reactive.postgresql.ssl-mode]]`link:#quarkus-reactive-pg-client-general-config-items_quarkus.datasource.reactive.postgresql.ssl-mode[quarkus.datasource.reactive.postgresql.ssl-mode]`


[.description]
--
SSL operating mode of the client.

See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full` 
|`disable`


h|[[quarkus-reactive-pg-client-general-config-items_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-reactive-pg-client-general-config-items_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-reactive-pg-client-general-config-items_quarkus.datasource.-datasource-name-.reactive.postgresql.pipelining-limit]]`link:#quarkus-reactive-pg-client-general-config-items_quarkus.datasource.-datasource-name-.reactive.postgresql.pipelining-limit[quarkus.datasource."datasource-name".reactive.postgresql.pipelining-limit]`


[.description]
--
The maximum number of inflight database commands that can be pipelined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-pg-client-general-config-items_quarkus.datasource.-datasource-name-.reactive.postgresql.ssl-mode]]`link:#quarkus-reactive-pg-client-general-config-items_quarkus.datasource.-datasource-name-.reactive.postgresql.ssl-mode[quarkus.datasource."datasource-name".reactive.postgresql.ssl-mode]`


[.description]
--
SSL operating mode of the client.

See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_POSTGRESQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_POSTGRESQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full` 
|`disable`

|===